--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,35 @@
         android:name="com.example.testapplication.ui.splash.SplashFragment"
         android:label="Splash"
         tools:layout="@layout/fragment_splash">
+
+        <action
+            android:id="@+id/action_splash_to_tags_list"
+            app:destination="@id/tags_list_fragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/tags_list_fragment"
+        android:name="com.example.testapplication.ui.tag_list.TagsListFragment"
+        android:label="TagsList"
+        tools:layout="@layout/fragment_tags_list">
+
+        <action
+            android:id="@+id/action_tags_list_to_products"
+            app:destination="@id/products_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/products_fragment"
+        android:name="com.example.testapplication.ui.products.ProductsFragment"
+        android:label="Products"
+        tools:layout="@layout/fragment_products_list">
+
+        <argument
+            android:name="productType"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
 </navigation>
